testing mobile overflow issue

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -150,7 +150,7 @@ a:visited {
 
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
-    width: 100%;
+    width: 99%;
     overflow-y: hidden;
 
     iframe {
